[gd_scene load_steps=10 format=4 uid="uid://c3wi3k4u6gdm7"]

[ext_resource type="Script" path="res://Scenes/Templates/Level/level_template.gd" id="1_sujfq"]
[ext_resource type="PackedScene" uid="uid://v4ixk2vs6cpt" path="res://Scenes/HUD/hud.tscn" id="2_bxcl8"]
[ext_resource type="PackedScene" uid="uid://hq3kndj7ibrr" path="res://Scenes/Gadgets/LevelEnding/level_ending.tscn" id="3_v0fcr"]
[ext_resource type="PackedScene" uid="uid://ddyqss5v87w2q" path="res://Scenes/TileMaps/World/world_tile_map.tscn" id="4_eaww6"]
[ext_resource type="PackedScene" uid="uid://bskjr2emjmkpo" path="res://Scenes/Templates/Level/LevelStats/level_stats.tscn" id="4_neskj"]
[ext_resource type="PackedScene" uid="uid://dlcsks5urffx5" path="res://Scenes/Characters/Player/player.tscn" id="6_rq5da"]

[sub_resource type="Animation" id="Animation_nbir2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pyibe"]
resource_name = "shake"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1), Vector2(1, -1), Vector2(-1, -1), Vector2(1, -1), Vector2(-1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je760"]
_data = {
"RESET": SubResource("Animation_nbir2"),
"shake": SubResource("Animation_pyibe")
}

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_sujfq")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" parent="CanvasLayer" node_paths=PackedStringArray("player") instance=ExtResource("2_bxcl8")]
player = NodePath("../../Player")
metadata/_edit_lock_ = true

[node name="LevelStats" parent="CanvasLayer" instance=ExtResource("4_neskj")]
visible = false
metadata/_edit_lock_ = true

[node name="WorldTileMap" parent="." instance=ExtResource("4_eaww6")]
tile_map_data = PackedByteArray("AAAiAA8AAQAHAAEAAAAiAA4AAQAHAAEAAAAhAA8AAQAHAAEAAAAhAA4AAQAHAAEAAAAgAA8AAQAHAAEAAAAgAA4AAQAHAAEAAAAfAA8AAQAHAAEAAAAfAA4AAQAHAAEAAAAeAA8AAQAHAAEAAAAeAA4AAQAHAAEAAAAdAA8AAQAHAAEAAAAdAA4AAQAHAAEAAAAcAA8AAQAHAAEAAAAcAA4AAQAHAAEAAAAbAA8AAQAHAAEAAAAbAA4AAQAHAAEAAAAaAA8AAQAHAAEAAAAaAA4AAQAHAAEAAAAZAA8AAQAHAAEAAAAZAA4AAQAHAAEAAAAYAA8AAQAHAAEAAAAYAA4AAQAHAAEAAAAXAA8AAQAHAAEAAAAXAA4AAQAHAAEAAAAWAA8AAQAHAAEAAAAWAA4AAQAHAAEAAAAVAA8AAQAHAAEAAAAVAA4AAQAHAAEAAAAUAA8AAQAHAAEAAAAUAA4AAQAHAAEAAAATAA8AAQAHAAEAAAATAA4AAQAHAAEAAAASAA8AAQAHAAEAAAASAA4AAQAHAAEAAAARAA8AAQAHAAEAAAARAA4AAQAHAAEAAAAQAA8AAQAHAAEAAAAQAA4AAQAHAAEAAAAPAA8AAQAHAAEAAAAPAA4AAQAHAAEAAAAOAA8AAQAHAAEAAAAOAA4AAQAHAAEAAAANAA8AAQAHAAEAAAANAA4AAQAHAAEAAAAMAA8AAQAHAAEAAAAMAA4AAQAHAAEAAAALAA8AAQAHAAEAAAALAA4AAQAHAAEAAAAKAA8AAQAHAAEAAAAKAA4AAQAHAAEAAAAJAA8AAQAHAAEAAAAJAA4AAQAHAAEAAAAIAA8AAQAHAAEAAAAIAA4AAQAHAAEAAAAHAA8AAQAHAAEAAAAHAA4AAQAHAAEAAAAGAA8AAQAHAAEAAAAGAA4AAQAHAAEAAAAFAA8AAQAHAAEAAAAFAA4AAQAHAAEAAAAiABAAAQAPAAAAAAAiAA0AAQASAAgAAAAhABAAAQANAAAAAAAhAA0AAQARAAgAAAAgABAAAQAOAAIAAAAgAA0AAQANAAUAAAAfABAAAQANAAIAAAAfAA0AAQARAAgAAAAeABAAAQANAAAAAAAeAA0AAQANAAUAAAAdABAAAQANAAgAAAAdAA0AAQASAAgAAAAcABAAAQASAAUAAAAcAA0AAQANAAUAAAAbABAAAQAOAAgAAAAbAA0AAQASAAgAAAAaABAAAQAOAAgAAAAaAA0AAQAPAAEAAAAZABAAAQANAAIAAAAZAA0AAQANAAQAAAAYABAAAQAPAAAAAAAYAA0AAQANAAQAAAAXABAAAQAOAAIAAAAXAA0AAQASAAgAAAAWABAAAQAOAAgAAAAWAA0AAQAOAAQAAAAVABAAAQARAAUAAAAVAA0AAQANAAUAAAAUABAAAQAOAAgAAAAUAA0AAQANAAEAAAATABAAAQANAAAAAAATAA0AAQAPAAEAAAASABAAAQAOAAIAAAASAA0AAQAOAAEAAAARABAAAQAOAAAAAAARAA0AAQAOAAQAAAAQABAAAQANAAgAAAAQAA0AAQANAAQAAAAPABAAAQAOAAIAAAAPAA0AAQANAAQAAAAOABAAAQANAAIAAAAOAA0AAQARAAgAAAANABAAAQARAAUAAAANAA0AAQASAAgAAAAMABAAAQARAAUAAAAMAA0AAQANAAEAAAALABAAAQASAAUAAAALAA0AAQANAAQAAAAKABAAAQAPAAAAAAAKAA0AAQANAAUAAAAJABAAAQARAAUAAAAJAA0AAQAOAAEAAAAIABAAAQAOAAgAAAAIAA0AAQAOAAEAAAAHABAAAQAOAAAAAAAHAA0AAQASAAgAAAAGABAAAQASAAUAAAAGAA0AAQAOAAEAAAAFABAAAQANAAIAAAAFAA0AAQANAAQAAAAEABAAAQAMAAgAAAAEAA8AAQATAAYAAAAEAA4AAQATAAcAAAAEAA0AAQAMAAUAAAAjABAAAQAPAAgAAAAjAA8AAQAMAAMAAAAjAA4AAQAMAAMAAAAjAA0AAQAPAAUAAAA=")
metadata/_edit_lock_ = true

[node name="LevelEnding" parent="." instance=ExtResource("3_v0fcr")]
position = Vector2(273, 120)

[node name="Player" parent="." instance=ExtResource("6_rq5da")]
position = Vector2(45, 123)

[node name="Enemies" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(160, 120)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_je760")
}

[connection signal="level_finished" from="LevelEnding" to="." method="_on_level_ending_level_finished"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
